Me added my social links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Credit: https://github.com/nayandas69/link-in-bio -->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link in Bio | Nayan Das</title>
+    <title>Link in Bio | Sophia Price</title>
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap"
@@ -28,53 +29,47 @@
         <!-- Profile Section -->
         <div class="profile">
             <img src="images/profile.jpg" alt="Profile Picture" class="profile-img">
-            <h1>Nayan Das</h1>
-            <p>Crafting Code & Content for a Connected World</p>
+            <h1>Sophia Price</h1>
+            <p>Capturing Moments & Exploring the World</p>
         </div>
 
         <!-- Social Links -->
         <div class="social-links">
             <div class="link-container">
-                <a href="https://github.com/nayandas69" class="social-link github" target="_blank">
-                    <i class="fab fa-github"></i>
+                <a href="https://instagram.com/sophia-price" class="social-link instagram" target="_blank">
+                    <i class="fab fa-instagram"></i>
                 </a>
-                <div class="hover-card">Check out my GitHub</div>
+                <div class="hover-card">Follow my photography journey</div>
             </div>
             <div class="link-container">
-                <a href="https://patreon.com/NayanDas69" class="social-link patreon" target="_blank">
-                    <i class="fab fa-patreon"></i>
-                </a>
-                <div class="hover-card">Support me on Patreon</div>
-            </div>
-            <div class="link-container">
-                <a href="https://youtube.com/@dasnayan69" class="social-link youtube" target="_blank">
+                <a href="https://youtube.com/@sophia-price" class="social-link youtube" target="_blank">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <div class="hover-card">Subscribe to my YouTube channel</div>
+                <div class="hover-card">Watch my travel vlogs</div>
             </div>
             <div class="link-container">
-                <a href="https://discord.gg/skHyssu" class="social-link discord" target="_blank">
-                    <i class="fab fa-discord"></i>
+                <a href="https://www.tiktok.com/@sophia-price" class="social-link tiktok" target="_blank">
+                    <i class="fab fa-tiktok"></i>
                 </a>
-                <div class="hover-card">Join my Discord server</div>
+                <div class="hover-card">Check out my travel reels</div>
             </div>
             <div class="link-container">
-                <a href="https://nayanchandradas.com" class="social-link website" target="_blank">
-                    <i class="fas fa-briefcase"></i>
+                <a href="https://sophiaprice.com" class="social-link website" target="_blank">
+                    <i class="fas fa-globe"></i>
                 </a>
-                <div class="hover-card">Visit my Website</div>
+                <div class="hover-card">Visit my photography blog</div>
             </div>
             <div class="link-container">
-                <a href="mailto:nayanchandradas@hotmail.com" class="social-link email" target="_blank">
+                <a href="mailto:email@sophiaprice.com" class="social-link email" target="_blank">
                     <i class="fas fa-envelope"></i>
                 </a>
-                <div class="hover-card">Email me</div>
+                <div class="hover-card">Email me for collaborations</div>
             </div>
         </div>
 
         <!-- Blog Section with Carousel -->
         <div class="blog-section">
-            <h2>Latest Blogs</h2>
+            <h2>Latest Travel & Photography Blogs</h2>
             <div class="carousel-container">
                 <div class="blog-carousel">
                     <!-- Blog items will be dynamically added here -->
@@ -91,7 +86,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2 id="blogTitle"></h2>
-            <p>by <strong><a href="https://youtube.com/@dasnayan69" target="_blank">dasnayan69</a></strong></p>
+            <p>by <strong><a href="https://youtube.com/@sophia-price" target="_blank">Sophia Price</a></strong></p>
             <div id="blogVideo"></div>
             <p id="blogDescription"></p>
         </div>
